# xmlwrapp

./: .cvsignore  .git-blame-ignore-revs  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  LICENSE  Makefile.am  NEWS  README  README.docs  README.md  ToDo  XmlwrappConfig.cmake.in  XmlwrappConfigVersion.cmake.in  bootstrap  configure.ac  configure.pl  index.html  params.json  xmlwrapp-config.in  xmlwrapp.pc.in  xsltwrapp.pc.in
docs/: .cvsignore  CMakeLists.txt  Doxyfile  Makefile.am  VERSION
docs/doxygen/: Makefile  doxyfile
docs/manual/: .cvsignore  Makefile  Makefile.gmake  Makefile.pmake  attributes.doxygen  attributes.texi  attributes.xml  bundling.texi  bundling.xml  changelog.texi  changelog.xml  copyright.texi  credits.texi  credits.xml  documents.doxygen  documents.texi  documents.xml  intro.doxygen  intro.texi  intro.xml  license.texi  license.xml  mainpage.doxygen  manual.texi  manual.xml  namespaces.doxygen  node.doxygen  node.texi  node.xml  parsing.doxygen  parsing.texi  parsing.xml  prepare.doxygen  prepare.texi  prepare.xml  quickstart.texi  quickstart.xml  tips.doxygen  tips.texi  tips.xml  (+9 more)
docs/manual_xml/: Makefile.pmake  attributes.xml  bundling.xml  changelog.xml  credits.xml  documents.xml  intro.xml  manual.xml  node.xml  parsing.xml  prepare.xml  quickstart.xml  tips.xml  todo.xml  whatnext.xml  xslt.xml
docs/project/: Makefile  download.xml  news.xml  project.xml  resources.xml
examples/01-tree_parsing/: .cvsignore  CMakeLists.txt  example.cxx
examples/02-event_parsing/: CMakeLists.txt  example.cxx
examples/03-xml_generation/: CMakeLists.txt  Makefile.am  example.cxx
examples/04-xslt/: CMakeLists.txt  Makefile.am  example.cxx  example.xml  example.xsl
examples/05-xpath/: CMakeLists.txt  Makefile.am  example.cxx  example.xml  full.cxx  full.xml
include/: CMakeLists.txt  Makefile.am
include/xmlwrapp/: _cbfo.h  access.h  attributes.h  config.h  const_node_interface.h  context.h  document.h  errors.h  event_parser.h  exception.h  export.h  expression.h  init.h  namespaces.h  node.h  node_ref.h  node_reference.h  node_set_iterator.h  nodes_view.h  noncopyable.h  object.h  pimpl.h  reference.h  relaxng.h  result.h  schema.h  tree_parser.h  tree_reader.h  version.h  xmlwrapp.h  xpath.h  xpath_cast.h  xpath_fwd.h  xpath_types.h
include/xmlwrapp/boost/: assert.hpp  checked_delete.hpp  config.hpp  scoped_array.hpp  scoped_ptr.hpp  shared_array.hpp  shared_ptr.hpp  smart_ptr.hpp  throw_exception.hpp
include/xmlwrapp/hacks/: nsstd.h  pragma4786.h  vsnprintf.h
include/xsltwrapp/: init.h  stylesheet.h  xsltwrapp.h
src/: .cvsignore  CMakeLists.txt  Makefile.am
src/libxml/: ait_impl.cxx  ait_impl.h  attributes.cxx  const_node_interface.cxx  context.cxx  context_rep.h  cpp11.h  document.cxx  dtd_impl.cxx  dtd_impl.h  errors.cxx  errors_impl.h  event_parser.cxx  expression.cxx  expression_rep.h  impl_cast.h  init.cxx  namespaces.cxx  node.cxx  node_impl.h  node_iterator.cxx  node_iterator.h  node_manip.cxx  node_manip.h  node_ref.cxx  node_reference.cxx  node_set_iterator.cxx  node_set_iterator_rep.h  nodes_view.cxx  object.cxx  object_rep.h  pimpl_base.h  relaxng.cxx  result.cxx  result_rep.h  schema.cxx  tree_parser.cxx  tree_reader.cxx  utility.cxx  utility.h  (+4 more)
src/libxslt/: init.cxx  result.h  stylesheet.cxx
tests/: CMakeLists.txt  Makefile.am  test.h  test_main.cxx
tests/attributes/: .cvsignore  Makefile.am  runtest.pl  test_attr-01.cxx  test_attr-02.cxx  test_attr-03.cxx  test_attr-04.cxx  test_attr-05.cxx  test_attr-06.cxx  test_attr-07.cxx  test_attr-08.cxx  test_attr-09.cxx  test_attr-10.cxx  test_attributes.cxx
tests/attributes/data/: 01a.out  01a.xml  01b.out  01b.xml  01c.out  01c.xml  02.out  02.xml  03.xml  04a.out  04b.out  04c.out  05.xml  05d.out  06b.xml  07b.xml  08.out  08.xml  09.dtd  09.xml  09a.out  09b.out  09c.out  10.dtd  10.out  10.xml
tests/document/: .cvsignore  Makefile.am  runtest.pl  test_document-01.cxx  test_document-02.cxx  test_document-03.cxx  test_document-04.cxx  test_document-05.cxx  test_document-06.cxx  test_document-07.cxx  test_document-08.cxx  test_document-09.cxx  test_document-10.cxx  test_document-11.cxx  test_document-12.cxx  test_document-13.cxx  test_document-14.cxx  test_document-15.cxx  test_document-16.cxx  test_document-17.cxx  test_document-18.cxx  test_document-19.cxx  test_document-20.cxx  test_document-21.cxx  test_document-22.cxx  test_document.cxx
tests/document/data/: 01.out  01.xml  02.out  04.out  08.out  13a.out  13b.out  14.out  14.xml  14inc.xml  15.out  17.out  18a.out  18c.out  19.out  20.out  21.out  22.out
tests/event/: .cvsignore  Makefile.am  runtest.pl  test_event-01.cxx  test_event-02.cxx  test_event-03.cxx  test_event.cxx
tests/event/data/: 01.out  01.xml
tests/harness/: harness.pm
tests/namespaces/: test_namespaces.cxx
tests/namespaces/data/: 01.xml  02.xml  03.out  03.xml  04.xml  04_01.out  04_02.out  05.xml  06.xml  06_01.out  06_02.out  07.xml  08.xml  08_01.out  09.xml  09_01.out
tests/node/: .cvsignore  Makefile.am  runtest.pl  test_node-01.cxx  test_node-02a.cxx  test_node-02b.cxx  test_node-02c.cxx  test_node-02d.cxx  test_node-02e.cxx  test_node-02f.cxx  test_node-02g.cxx  test_node-02h.cxx  test_node-03a.cxx  test_node-03b.cxx  test_node-04a.cxx  test_node-04b.cxx  test_node-05a.cxx  test_node-05b.cxx  test_node-05c.cxx  test_node-05d.cxx  test_node-06.cxx  test_node-07.cxx  test_node-08.cxx  test_node-09.cxx  test_node-10.cxx  test_node-11.cxx  test_node-12.cxx  test_node-13.cxx  test_node-14.cxx  test_node.cxx
tests/node/data/: 01.out  02.xml  02_after_move.out  02b.out  02c.out  02h.out  03.xml  03a.out  (+28 more)
tests/relaxng/: test_relaxng.cxx
tests/schema/: test_schema.cxx
tests/tree/: .cvsignore  Makefile.am  runtest.pl  test_tree-01.cxx  test_tree-02.cxx  test_tree-03.cxx  test_tree-04.cxx  test_tree-05.cxx  test_tree-06.cxx  test_tree.cxx
tests/xpath/: test_xpath.cxx
tests/xslt/: .cvsignore  Makefile.am  runtest.pl  test_xslt-01.cxx  test_xslt-02.cxx  test_xslt-03.cxx  test_xslt-04.cxx  test_xslt-05.cxx  test_xslt.cxx
(+550 files in other folders)
