
xmlwrapp_includedir= $(includedir)/xmlwrapp
xmlwrapp_include_HEADERS = \
		xmlwrapp/attributes.h \
		xmlwrapp/_cbfo.h \
		xmlwrapp/document.h \
		xmlwrapp/event_parser.h \
		xmlwrapp/errors.h \
		xmlwrapp/export.h \
		xmlwrapp/init.h \
		xmlwrapp/node.h \
		xmlwrapp/nodes_view.h \
		xmlwrapp/schema.h \
		xmlwrapp/tree_parser.h \
		xmlwrapp/version.h \
		xmlwrapp/xmlwrapp.h \
		xmlwrapp/xpath.h

if WITH_XSLT
xsltwrapp_includedir= $(includedir)/xsltwrapp
xsltwrapp_include_HEADERS = \
		xsltwrapp/init.h \
		xsltwrapp/stylesheet.h \
		xsltwrapp/xsltwrapp.h
endif
